[package]
name = "dummy_os"
version = "0.1.0"
authors = ["Brendan Long <bccbrendan@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "*"
spin = "*"
[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"
[dependencies.bitflags]
version = "0.4.0"
features = ["no_std"]
[dependencies.x86]
version = "0.6.0"
default-features = false
